# sphinx-xml2rfc

./: .buildinfo  .gitignore  .pyup.yml  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg  tox.ini
.doctrees/: environment.pickle  index.doctree
.github/: dependabot.yml
.github/workflows/: cicd.yml
_sources/: index.md.txt
_static/: documentation_options.js
docs/: conf.py
packaging/: constraints-docs.txt  requirements-dev.txt  requirements-docs.txt  requirements-lint.txt  requirements-typecheck.txt
sphinx_xml2rfc/: __init__.py  autogen.py  domain.py  utils.py
tests/: conftest.py  test-draft.xml  test_extension.py
tests/roots/test-ext-xml2rfc/: conf.py  index.rst
tests/roots/test-ext-xml2rfc-autogen/: conf.py  index.rst
tests/roots/test-ext-xml2rfc/_xml2rfc/bar/: draft.txt
tests/roots/test-ext-xml2rfc/_xml2rfc/foo/: draft.txt
