[metadata]
name = sphinx-xml2rfc
description = A sphinx extension for documenting IETF Internet-Draft versions
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Ben Maddison
author_email = benm@workonline.africa
keywords =
    ietf
    xml2rfc
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    GitPython>=3.1.17
    xml2rfc>=3.8.0
    Sphinx>=3.5.4
