[metadata]
name = sphinx-xml2rfc
description = A sphinx extension for documenting IETF Internet-Draft versions
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Ben Maddison
author_email = benm@workonline.africa
url = https://github.com/benmaddison/sphinx-xml2rfc
project_urls =
    Documentation=https://benmaddison.github.io/sphinx-xml2rfc
    Bug Tracker=https://github.com/benmaddison/sphinx-xml2rfc/issues
keywords =
    ietf
    xml2rfc
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Internet
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Version Control :: Git
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    GitPython>=3.1.17
    xml2rfc>=3.8.0
    Sphinx>=3.5.4
